--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
     <img src="./photos/wind-tunnel.png">
 
     <h2>
-        How to/About:
+        How to/About: DON'T WORRY BY THE END OF TODAY THIS WEBSITE GONNA BE BOOTIFUL
     </h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque odio mollitia neque ipsa, sequi at provident autem cum, obcaecati molestiae sit tenetur, tempora ad asperiores natus temporibus placeat? Quidem, veniam!
